--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
 <head>
   <meta charset="utf-8">
   <!-- Title in the browser tab -->
-  <title>m.i.n.a.r.</title>
+  <title>Ismail Ou khalek</title>
   <!-- Description used when the site is added to favorites -->
-  <meta name="description" content="m.i.n.a.r. official site.">
+  <meta name="description" content="Ismail Ou khalek Portfolio site.">
   <meta name="author" content="m.i.n.a.r." />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <!-- This attribute controls the Chrome action bar color on mobile devices -->
   <meta name="theme-color" content="#000000">
   <!-- Css files involved, including the local css and FontAwesome v5 -->
   <link rel="stylesheet" href="assets/css/main.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
-  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="shortcut icon" type="image/x-icon" href="images/ico.png" />
+  <noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
 <body>
@@ -28,15 +31,13 @@
 
     <!-- Header - a logo, a short sentence -->
     <header id="header" class="alt">
-      <span class="logo"><img src="images/logo.svg" alt="" /></span>
-      <p>Developer, 3d printing passionate and designer</p>
+      <p>Web Developer,scraping and data extraction specialist.</p>
 
       <!-- A set of social media and quick links. Up to four links are supported -->
       <ul class="icons">
-        <li><a href="https://github.com/m-i-n-a-r" target="_blank" class="fab fa-github fa-2x"></a></li>
-        <li><a href="https://www.linkedin.com/in/gianluca-conti-723926147/" target="_blank" class="fab fa-linkedin fa-2x"></a></li>
-        <li><a href="https://play.google.com/store/apps/dev?id=7720251761301594831" target="_blank" class="fab fa-google-play fa-2x"></a></li>
-        <li><a href="https://www.instagram.com/minar.tastic/" target="_blank" class="fab fa-instagram fa-2x"></a></li>
+        <li><a href="https://github.com/kingsamadesu" target="_blank" class="fab fa-github fa-2x"></a></li>
+        <li><a href="https://www.linkedin.com/in/ou-khalek-ismail-4708b2148/" target="_blank"
+            class="fab fa-linkedin fa-2x"></a></li>
         <!--<li><a href="https://www.youtube.com/channel/UChVxFCDNULWEiDqfrjuZ3Tw" target="_blank" class="fab fa-youtube fa-2x"></a></li>-->
       </ul>
       </section>
@@ -64,7 +65,7 @@
             </header>
             <p id="me"></p>
           </div>
-          <span class="image"><img src="images/profile.png" alt="" /></span>
+          <span class="image"><img src="images/Photo.jpg" alt="" /></span>
         </div>
       </section>
 
@@ -81,47 +82,24 @@
           <li>Java</li>
           <li>C</li>
           <li>Javascript</li>
-          <li>Angular</li>
-          <li>Typescript</li>
           <li>Python</li>
-          <li>Kotlin</li>
-          <li>Dart</li>
-          <li>Flutter</li>
           <li>HTML/css</li>
           <li>SQL</li>
-          <li>LUA</li>
         </ul>
 
         <h2><i class="fas fa-laptop"></i><b>Softwares and platforms</b></h2>
         <ul class="features outline">
           <li>Android Studio</li>
           <li>Visual Studio</li>
-          <li>Eclipse</li>
-          <li>Office suite</li>
-          <li>Adobe Suite</li>
-          <li>Inkscape</li>
-          <li>Sony Vegas</li>
-          <li>Linux OSes and bash</li>
-          <li>Windows and PowerShell</li>
-          <li>PostgreSQL</li>
-          <li>Fusion360</li>
-          <li>Simplify3D</li>
         </ul>
 
-        <h2><i class="fas fa-suitcase"></i><b>Hardware and miscellanous</b></h2>
+        <h2><i class="fas fa-suitcase"></i><b>Skills</b></h2>
         <ul class="features outline">
           <li>Software architectures</li>
-          <li>3D printers maintenance</li>
-          <li>Pc repair and assembly</li>
-          <li>Kernel and rom compilation</li>
-          <li>Advanced Android using</li>
-          <li>3D modeling and processing</li>
-          <li>System administration</li>
-          <li>Social media management</li>
-          <li>Fluent english speaker</li>
-          <li>Logic and problem solving</li>
-          <li>Photographic skills</li>
-          <li>Creative design skills</li>
+          <li>Scraping</li>
+          <li>DATA extraction</li>
+          <li>Automation</li>
+          <li>chrome extensions development</li>
         </ul>
       </section>
 
@@ -137,71 +115,47 @@
         <div class="spotlight">
           <div class="content">
             <header class="major">
-              <h3><b>Pip-Boy Watchface</b></h3>
+              <h3><b>Debump</b></h3>
             </header>
             <div>
-              <span class="image-small"><img src="images/pipboy.png" alt="" /></span>
+              <span class="image-small"><img src="images/debump.png" alt="" /></span>
               <p>
-                This watchface was started back in 2015 as a personal project. It uses LUA scripting and a set of graphic
-                resources, personally recreated in Photoshop. I gradually improved it, and today it has around 25k
-                paid downloads. I'm still working on it!
+                This project was created for sellers that uses depop.com platform to sell their products. the project was a chrome extension made for one of my Client in Upwork. the extension has a payement implementation for monthly subscriptions with a free trail new users.
               </p>
             </div>
-            <a href="https://play.google.com/store/apps/details?id=minar.wmwatch.pipboy" class="button small" target="_blank">Learn
-              More</a>
+            <a href="https://chrome.google.com/webstore/detail/debump/naoanpnjififodcipibbkgejbohcbnge" class="button small"
+              target="_blank">Go to the google store</a>
           </div>
         </div>
 
         <div class="spotlight">
           <div class="content">
             <header class="major">
-              <h3><b>Escape Earth - NASA Hackaton 2018</b></h3>
+              <h3><b>Top Youtube commentor</b></h3>
             </header>
             <div>
-              <span class="image-small"><img src="images/escapeearth.png" alt="" /></span>
+              <span class="image-small"><img src="images/youtube_data_api.png" alt="" /></span>
               <p>
-                This is a project created during the NASA Space Apps Challenge (20-21 October 2018).
-                It's a cross platform application developed using the Flutter Framework. What i did was
-                working on the initial idea, on the code and on the UI. Furthermore, i made the pitch video
-                and PowerPoint presentation.
+                This is a project created as a first data extractor for large amounts of data. This project aim to extract all comments for specific youtube channel with all metadata for each comment. This project uses Youtube API 3 to retrive data from youtube using axios libaray then save all the data for a specific youtube channel in sqlite database then analyse this data to retrive full information about the every commmentor including number of comments, likes , disliks and replies then sort all result by one of this cretiria
               </p>
             </div>
-            <a href="https://github.com/simonesestito/escape_earth" class="button small" target="_blank">Learn More</a>
+            <a href="https://github.com/kingsamadesu/Youtube-Top-100-" class="button small" target="_blank">Learn More</a>
           </div>
         </div>
 
         <div class="spotlight">
           <div class="content">
             <header class="major">
-              <h3><b>Randomix - Decision Maker</b></h3>
+              <h3><b>Kalah</b></h3>
             </header>
             <div>
-              <span class="image-small"><img src="images/randomix.png" alt="" /></span>
+              <span class="image-small"><img src="images/kalah.bmp" alt="" /></span>
               <p>
-                An app coded during my free time. Basically, it's an open source random decisor, and it's available
-                free. It uses a lot of animated vector drawables, an interesting Android resource type.
-                The code is available on Github for improvements and translations.
+                An app coded during S1 in ensias. Basically, it's a simple game developed using C and SDL2 libaray.The code is available on Github's binome.
               </p>
             </div>
-            <a href="https://play.google.com/store/apps/details?id=com.minar.randomix" class="button small" target="_blank">Learn
-              More</a>
-          </div>
-        </div>
-
-        <div class="spotlight">
-          <div class="content">
-            <header class="major">
-              <h3><b>Birday - Birthday Manager</b></h3>
-            </header>
-            <div>
-              <span class="image-small"><img src="images/birday.png" alt="" /></span>
-              <p>
-                Another free time app, written in Kotlin this time. Basically, it's an open source birthday manager, and it's available
-                free. It uses a Room database and the MVVM design pattern, providing an automatic import of birthdays from Google Contacts.
-                The code is available on Github for improvements and translations.
-              </p>
-            </div>
-            <a href="https://play.google.com/store/apps/details?id=com.minar.birday" class="button small" target="_blank">Learn
+            <a href="https://github.com/abdorah/kalah_game" class="button small"
+              target="_blank">Learn
               More</a>
           </div>
         </div>
@@ -219,39 +173,22 @@
                 downloads. Other skins are under development and the download count is going up!
               </p>
             </div>
-            <a href="https://play.google.com/store/apps/dev?id=7701026929786273235&hl=it" class="button small" target="_blank">Learn
+            <a href="https://play.google.com/store/apps/dev?id=7701026929786273235&hl=it" class="button small"
+              target="_blank">Learn
               More</a>
           </div>
         </div>
 
-        <!-- Image-less project entry. Used for the site itself, but can be duplicated -->
-        <div class="spotlight">
-          <div class="content-short">
-            <h3><b>This Portfolio Site!</b></h3>
-            <p class="short">
-              This site itself is one of my projects! I decided to Upload the souce
-              on Github, to be used as a base for other developers. You can find it
-              <a href="https://github.com/m-i-n-a-r/sparky-portfolio" target="_blank">here</a>!
-              You will also find informations about hosting services and domains!
-            </p>
-          </div>
-        </div>
-      </section>
+
 
       <!-- Fun facts (not an actual section, but it's useful sometimes) -->
       <section id="funfacts" class="main special">
         <h3><b>Fun facts!</b></h3>
         <ul class="facts">
-          <li>I like to dress elegantly, every time is possible.</li>
-          <li>I'm part of different groups of developers, especially on Telegram. Here i found some real friends.</li>
-          <li>I can recognize almost any car model i see, and i especially like japanese sport cars.</li>
-          <li>Even if i'm not a boy anymore, i often use my free time to play videogames.</li>
-          <li>I collect a lot of things, from coins to stamps to caps.</li>
-          <li>I'm a tech addicted, but also an environment addicted. So i avoid to buy things continuously.</li>
-          <li>My nickname, minar, comes from a trading card game, and was my first Xbox gamertag back in 2005.</li>
-          <li>I used to have a 5000 subscribers YouTube channel. It has been terminated for a reason I never understood.</li>
-          <li>I listen to music of all genres, and i particularly like electronic and classical music.</li>
-          <li>I prefer cats over dogs and mountain over sea.</li>
+          <li>I keep practicing CP to keep my coding skills polished.</li>
+          <li>I'am fun to japanise manga and anime</li>
+          <li>I have watched all big anime series and still watching some of them.</li>
+          <li>I used to do dropshipping, this experience helped me to get one of my first freelance</li>
         </ul>
       </section>
 
@@ -267,11 +204,11 @@
         <ul class="statistics">
           <li class="style1">
             <span class="icon fas fa-download"></span>
-            <strong>+100.000</strong> Play Store downloads
+            <strong>+10</strong> Costumized Chrome extensions developed
           </li>
           <li class="style2">
             <span class="icon fas fa-money-bill"></span>
-            <strong>30.000</strong> Play Store paid downloads
+            <strong>3</strong> Paid Chrome extensions
           </li>
           <li class="style1">
             <span class="icon fas fa-calendar-check"></span>
@@ -279,11 +216,11 @@
           </li>
           <li class="style2">
             <span class="icon fas fa-list-alt"></span>
-            <strong>30</strong> Github repositories
+            <strong>13</strong> Github repositories
           </li>
           <li class="style1">
             <span class="icon fas fa-gem"></span>
-            <strong>+1.000</strong> Animations and icons created
+            <strong>+60</strong> Website scraped
           </li>
         </ul>
       </section>
@@ -302,18 +239,17 @@
       <section>
         <h2>How to contact me:</h2>
         <!-- Some contact informations. Other informations can be added -->
-        <dl class="alt">   
+        <dl class="alt">
           <dt>Email</dt>
-          <dd><a href="mailto:minar.tastic@gmail.com?Subject=Request">minar.tastic@gmail.com</a></dd>      
+          <dd><a href="mailto:ismailhivi@gmail.com?Subject=Request">ismailhivi@gmail.com</a></dd>
           <dt>City</dt>
-          <dd>Rome, Italy</dd>
+          <dd>Er-rich, Morocco</dd>
           <dt>Social</dt>
           <dd>
             <ul class="icons">
-              <li><a href="https://github.com/m-i-n-a-r" target="_blank" class="fab fa-github"></a></li>
-              <li><a href="https://www.linkedin.com/in/gianluca-conti-723926147/" target="_blank" class="fab fa-linkedin"></a></li>
-              <li><a href="https://play.google.com/store/apps/dev?id=7720251761301594831" target="_blank" class="fab fa-google-play"></a></li>
-              <li><a href="https://www.instagram.com/minar.tastic/" target="_blank" class="fab fa-instagram"></a></li>
+              <li><a href="https://github.com/kingsamadesu" target="_blank" class="fab fa-github fa-2x"></a></li>
+              <li><a href="https://www.linkedin.com/in/ou-khalek-ismail-4708b2148/" target="_blank"
+                  class="fab fa-linkedin fa-2x"></a></li>
             </ul>
           </dd>
         </dl>
@@ -331,15 +267,14 @@
   <script src="assets/js/breakpoints.min.js"></script>
   <script src="assets/js/util.js"></script>
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/particles.js"></script>
   <script src="assets/js/app.js"></script>
 
   <script>
     // Variables to change to correctly generate the initial description and other informations
-    birthYear = 1995; // Year of birth
-    birthMonth = 2; // Month of birth, without leading zero
-    birthDay = 23; // Day of birth, without leading zero
-    experienceStart = 2011; // Year from which the experience starts (e.g. when i wrote my first line of code)
+    birthYear = 1999; // Year of birth
+    birthMonth = 3; // Month of birth, without leading zero
+    birthDay = 10; // Day of birth, without leading zero
+    experienceStart = 2019; // Year from which the experience starts (e.g. when i wrote my first line of code)
     date = new Date();
     year = date.getFullYear();
     experience = year - experienceStart;
@@ -354,14 +289,7 @@
       year--;
     age = year - birthYear;
     // The initial description. It is meant to be modified freely
-    me = "I'm a " + age + " years old guy, i have many interests and hobbies and a great " +
-      "propension to <b>create</b>. I worked on software for different platforms and operating systems, " +
-      "graphic design, 3d printing and modeling, videomaking, photography, AI, music and more. I also like " + 
-      "videogames, cars, sports and philosophy. I became interested in computer science relatively late, " + 
-      "at 16, and I started modding games and mobile phones and creating icons and animations. The <b>patience</b> " +
-      "is probably my best quality, and i know how to find the informations to solve the problems i face " +
-      "during my work, usually! Just to mention, i'm a <b>computer engineer</b>, and i can work both " + 
-      "alone or in a team.";
+    me = "Hi there I am software engineer student and independant freelancer. I love coding and searching for creative solution, I have many experiences in data mining/scraping and web development, I love competitive programming, I focus on keeping my work optimized and fast as possible.";
 
     // Assign the description to the correct html element, given its id 
     document.getElementById('me').innerHTML = me;
