--- a/index.html
+++ b/index.html
@@ -163,19 +163,17 @@
         <div class="spotlight">
           <div class="content">
             <header class="major">
-              <h3><b>Folginar Development Project</b></h3>
+              <h3><b>Youtube real time info update</b></h3>
             </header>
             <div>
-              <span class="image-small"><img src="images/folginar.png" alt="" /></span>
+              <span class="image-small"><img src="images/realtimeupdate.png" alt="" /></span>
               <p>
-                A project started with a friend of mine. It's a set of skins for PowerAmp (one of the most used music
-                players for Android) and they're currently the most famous skins for PowerAmp v3, with around 5k paid
-                downloads. Other skins are under development and the download count is going up!
+                My first published chrome extension. this chrome extension is able to update all youtube info every moment (number of likes disliks number subscripbers ) so you can how many one is watching the same video you are watching in the same time. you can observe how the number of watches increase while you are watching a video no youtube. this chrome extension uses youtube API 3 to retrive data.
               </p>
             </div>
-            <a href="https://play.google.com/store/apps/dev?id=7701026929786273235&hl=it" class="button small"
-              target="_blank">Learn
-              More</a>
+            <a href="https://chrome.google.com/webstore/detail/real-time-youtube-video-u/blpmoinkdhcfnkopoemhfafjfmbikdlm" class="button small"
+              target="_blank">
+              link to it in chrome store</a>
           </div>
         </div>
 
