--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <!-- Nav - navbar of contents, used in the desktop version -->
     <nav id="nav">
       <ul>
-        <li><a href="#intro" class="active">Who are you?</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#infos">Additional infos</a></li>
+        <li><a href="#intro" class="active">Qui es-tu?</a></li>
+        <li><a href="#skills">Compétences</a></li>
+        <li><a href="#projects">Projets</a></li>
+        <li><a href="#infos">Informations Complémentaires</a></li>
       </ul>
     </nav>
 
@@ -61,7 +61,7 @@
         <div class="spotlight">
           <div class="content">
             <header class="major">
-              <h2><b>WHO ARE YOU?</b></h2>
+              <h2><b>QUI ES-TU?</b></h2>
             </header>
             <p id="me"></p>
           </div>
@@ -72,12 +72,12 @@
       <!-- Skills - list of scopes and related skills -->
       <section id="skills" class="main special">
         <header class="major">
-          <h2><b>MY PERSONAL SKILLS</b></h2>
+          <h2><b>Mes compétences personnelles</b></h2>
         </header>
 
         <!-- Other entries can be added to the list of scopes and to the list of skills 
         The icons are from FontAwesome v5: choose one from their site and type its name to use it -->
-        <h2><i class="fas fa-code"></i><b>Languages and frameworks</b></h2>
+        <h2><i class="fas fa-code"></i><b>Languages et frameworks</b></h2>
         <ul class="features outline">
           <li>Java</li>
           <li>C</li>
@@ -87,13 +87,13 @@
           <li>SQL</li>
         </ul>
 
-        <h2><i class="fas fa-laptop"></i><b>Softwares and platforms</b></h2>
+        <h2><i class="fas fa-laptop"></i><b>Softwares et platforms</b></h2>
         <ul class="features outline">
           <li>Android Studio</li>
           <li>Visual Studio</li>
         </ul>
 
-        <h2><i class="fas fa-suitcase"></i><b>Skills</b></h2>
+        <h2><i class="fas fa-suitcase"></i><b>Compétences</b></h2>
         <ul class="features outline">
           <li>Software architectures</li>
           <li>Scraping</li>
@@ -107,8 +107,8 @@
       <section id="projects" class="main special">
         <header class="major">
           <h2><b>MY WORKS</b></h2>
-          <p>I was part of some collaborations, and i worked alone on various different projects.<br />
-            Here's a list of my favorites!</p>
+          <p>Je faisais partie de certaines collaborations et j'ai travaillé seul sur divers projets différents. <br />
+            Voici une liste de mes favoris!</p>
         </header>
 
         <!-- A small description, an image and a link. Nothing more. Other entries can be added -->
@@ -120,11 +120,10 @@
             <div>
               <span class="image-small"><img src="images/debump.png" alt="" /></span>
               <p>
-                This project was created for sellers that uses depop.com platform to sell their products. the project was a chrome extension made for one of my Client in Upwork. the extension has a payement implementation for monthly subscriptions with a free trail new users.
-              </p>
+Ce projet a été créé pour les vendeurs qui utilisent la plate-forme de Depop.com pour vendre leurs produits. Le projet était une extension chromée faite pour l'un de mes clients en upwwork. L'extension a une implémentation de paiement pour les abonnements mensuels avec un Trail gratuit de nouveaux utilisateurs.              </p>
             </div>
             <a href="https://chrome.google.com/webstore/detail/debump/naoanpnjififodcipibbkgejbohcbnge" class="button small"
-              target="_blank">Go to the google store</a>
+              target="_blank">Aller au magasin Google</a>
           </div>
         </div>
 
@@ -136,7 +135,7 @@
             <div>
               <span class="image-small"><img src="images/youtube_data_api.png" alt="" /></span>
               <p>
-                This is a project created as a first data extractor for large amounts of data. This project aim to extract all comments for specific youtube channel with all metadata for each comment. This project uses Youtube API 3 to retrive data from youtube using axios libaray then save all the data for a specific youtube channel in sqlite database then analyse this data to retrive full information about the every commmentor including number of comments, likes , disliks and replies then sort all result by one of this cretiria
+                Ceci est un projet créé comme premier extracteur de données pour de grandes quantités de données. Ce projet a pour objectif d'extraire tous les commentaires pour une chaîne YouTube spécifique avec toutes les métadonnées pour chaque commentaire. Ce projet utilise YouTube API 3 pour revenir aux données de YouTube à l'aide d'Axios Libaray, puis enregistrez toutes les données d'un canal YouTube spécifique dans la base de données SQLITE, puis analysez ces données pour revenir des informations complètes sur le nombre de commentaires, des goûts, des gouttes et des réponses. Trier tous les résultats par l'une de ces crétières
               </p>
             </div>
             <a href="https://github.com/kingsamadesu/Youtube-Top-100-" class="button small" target="_blank">Learn More</a>
@@ -151,8 +150,7 @@
             <div>
               <span class="image-small"><img src="images/kalah.bmp" alt="" /></span>
               <p>
-                An app coded during S1 in ensias. Basically, it's a simple game developed using C and SDL2 libaray.The code is available on Github's binome.
-              </p>
+Une application codée au cours de S1 en Enseas. Fondamentalement, c'est un jeu simple développé en utilisant C et SDL2 Libaray.Le code est disponible sur Github's Binome.              </p>
             </div>
             <a href="https://github.com/abdorah/kalah_game" class="button small"
               target="_blank">Learn
@@ -168,12 +166,11 @@
             <div>
               <span class="image-small"><img src="images/realtimeupdate.png" alt="" /></span>
               <p>
-                My first published chrome extension. this chrome extension is able to update all youtube info every moment (number of likes disliks number subscripbers ) so you can how many one is watching the same video you are watching in the same time. you can observe how the number of watches increase while you are watching a video no youtube. this chrome extension uses youtube API 3 to retrive data.
-              </p>
+Ma première extension chromée publiée. Cette extension chromée est capable de mettre à jour toutes les informations YouTube à chaque instant (nombre de goûts N'ÉMANKS NUMBER ABLIPBIRES) afin que vous puissiez combien vous pouvez regarder la même vidéo que vous regardez dans le même temps. Vous pouvez observer comment le nombre de montres augmente pendant que vous regardez une vidéo no YouTube. Cette extension Chrome utilise YouTube API 3 pour revenir sur les données.              </p>
             </div>
             <a href="https://chrome.google.com/webstore/detail/real-time-youtube-video-u/blpmoinkdhcfnkopoemhfafjfmbikdlm" class="button small"
               target="_blank">
-              link to it in chrome store</a>
+              Lien avec elle dans le magasin chromé</a>
           </div>
         </div>
 
@@ -181,36 +178,36 @@
 
       <!-- Fun facts (not an actual section, but it's useful sometimes) -->
       <section id="funfacts" class="main special">
-        <h3><b>Fun facts!</b></h3>
+        <h3><b>Faits amusants!</b></h3>
         <ul class="facts">
-          <li>I keep practicing CP to keep my coding skills polished.</li>
-          <li>I'am fun to japanise manga and anime</li>
-          <li>I have watched all big anime series and still watching some of them.</li>
-          <li>I used to do dropshipping, this experience helped me to get one of my first freelance</li>
+          <li>Je continue de pratiquer CP pour conserver mes compétences de codage polies.</li>
+          <li>Je suis amusant de japaniser manga et anime</li>
+          <li>J'ai regardé toute la grande série anime et je regarde encore certains d'entre eux.</li>
+          <li>J'avais l'habitude de faire dropshipping, cette expérience m'a aidé à obtenir l'une de mes premières indépendantes</li>
         </ul>
       </section>
 
       <!-- More infos - statistics and a personal goal -->
       <section id="infos" class="main special">
         <header class="major">
-          <h2><b>SOME NUMBER, AND MY GOAL</b></h2>
-          <p>All i want is to use my natural attitudes to improve a little piece of world.
-            Work and ambitions are important, but only if you can share your progresses with
-            someone you love.</p>
+          <h2><b>Quelque nombre et mon objectif</b></h2>
+          <p>Tout ce que je veux, c'est utiliser mes attitudes naturelles pour améliorer un peu de monde.
+            Les travaux et les ambitions sont importants, mais seulement si vous pouvez partager vos progrès avec
+            quelqu'un que tu aimes.</p>
         </header>
         <!-- Some statistics, to highlight particular numbers. Other numbers can be added to the list -->
         <ul class="statistics">
           <li class="style1">
             <span class="icon fas fa-download"></span>
-            <strong>+10</strong> Costumized Chrome extensions developed
+            <strong>+10</strong> Extensions chromées personnalisées développées
           </li>
           <li class="style2">
             <span class="icon fas fa-money-bill"></span>
-            <strong>3</strong> Paid Chrome extensions
+            <strong>3</strong> Extensions chromées payées
           </li>
           <li class="style1">
             <span class="icon fas fa-calendar-check"></span>
-            <strong id="experience"></strong> Years of experience
+            <strong id="experience"></strong> Des années d'expérience
           </li>
           <li class="style2">
             <span class="icon fas fa-list-alt"></span>
@@ -228,14 +225,14 @@
     <!-- Footer - contacts and another short text -->
     <footer id="footer">
       <section>
-        <h2>Why contact me?</h2>
+        <h2>Comment me contacter?</h2>
         <!-- A final message for the viewer -->
-        <p>You can contact me for various reasons, and i'll do my best to answer you.
-          You can do it to ask for assistance with my apps, to suggest improvements, or to give
-          a feedback. i'll also consider offers, eventually!</p>
+        <p>Vous pouvez me contacter pour diverses raisons et je ferai de mon mieux pour vous répondre.
+          Vous pouvez le faire pour demander de l'aide avec mes applications, suggérer des améliorations ou donner
+          un retour d'information. Je vais également envisager des offres, finalement!</p>
       </section>
       <section>
-        <h2>How to contact me:</h2>
+        <h2>Comment me contacter:</h2>
         <!-- Some contact informations. Other informations can be added -->
         <dl class="alt">
           <dt>Email</dt>
@@ -287,7 +284,7 @@
       year--;
     age = year - birthYear;
     // The initial description. It is meant to be modified freely
-    me = "Hi there I am software engineer student and independant freelancer. I love coding and searching for creative solution, I have many experiences in data mining/scraping and web development, I love competitive programming, I focus on keeping my work optimized and fast as possible.";
+    me = "Bonjour, je suis étudiant et indépendant indépendant. J'aime coder et rechercher une solution créative, j'ai de nombreuses expériences dans les données minières / raclage et développement Web, j'aime la programmation concurrentielle, je me concentre sur la conservation de mon travail optimisé et rapide que possible.";
 
     // Assign the description to the correct html element, given its id 
     document.getElementById('me').innerHTML = me;
