Projects section updated

--- a/index.html
+++ b/index.html
@@ -155,18 +155,38 @@
         <div class="spotlight">
           <div class="content">
             <header class="major">
-              <h3><b>Escape Earth - NASA Hackaton 2018</b></h3>
+              <h3><b>Birday - Birthday Manager</b></h3>
             </header>
             <div>
-              <span class="image-small"><img src="images/escapeearth.png" alt="" /></span>
+              <span class="image-small"><img src="images/birday.png" alt="" /></span>
               <p>
-                This is a project created during the NASA Space Apps Challenge (20-21 October 2018).
-                It's a cross platform application developed using the Flutter Framework. What i did was
-                working on the initial idea, on the code and on the UI. Furthermore, i made the pitch video
-                and PowerPoint presentation.
+                Another free time app, written in Kotlin this time. Basically, it's an open source event manager, and it's available
+                free. It uses a Room database and the MVVM design pattern, providing an automatic import of birthdays from Google Contacts.
+                The code is available on Github for improvements and translations (currently almost 20 translations).
               </p>
             </div>
-            <a href="https://github.com/simonesestito/escape_earth" class="button small" target="_blank">Learn More</a>
+            <a href="https://play.google.com/store/apps/details?id=com.minar.birday" class="button small" target="_blank">Learn
+              More</a>
+          </div>
+        </div>
+
+        <div class="spotlight">
+          <div class="content">
+            <header class="major">
+              <h3><b>QR Wallet - Green Pass, tickets</b></h3>
+            </header>
+            <div>
+              <span class="image-small"><img src="images/qrwallet.png" alt="" /></span>
+              <p>
+                A Flutter app to manage any QR code or barcode easily.
+                It has a specific Green Pass feature, to display every detail. It works completely offline of course, 
+                and also features a privacy mode and a nice design.
+                It's available free with ads, and ads can be removed for no additional cost by watching a 20 seconds 
+                video ad once a week.
+              </p>
+            </div>
+            <a href="https://play.google.com/store/apps/details?id=com.exos.qrwallet" class="button small" target="_blank">Learn
+              More</a>
           </div>
         </div>
 
@@ -179,7 +199,7 @@
               <span class="image-small"><img src="images/randomix.png" alt="" /></span>
               <p>
                 An app coded during my free time. Basically, it's an open source random decisor, and it's available
-                free. It uses a lot of animated vector drawables, an interesting Android resource type.
+                free. It uses a lot of animated vector drawables, an interesting Android resource type. following the latest principles of Material Design.
                 The code is available on Github for improvements and translations.
               </p>
             </div>
@@ -191,36 +211,18 @@
         <div class="spotlight">
           <div class="content">
             <header class="major">
-              <h3><b>Birday - Birthday Manager</b></h3>
+              <h3><b>Escape Earth - NASA Hackaton 2018</b></h3>
             </header>
             <div>
-              <span class="image-small"><img src="images/birday.png" alt="" /></span>
+              <span class="image-small"><img src="images/escapeearth.png" alt="" /></span>
               <p>
-                Another free time app, written in Kotlin this time. Basically, it's an open source birthday manager, and it's available
-                free. It uses a Room database and the MVVM design pattern, providing an automatic import of birthdays from Google Contacts.
-                The code is available on Github for improvements and translations.
+                This is a project created during the NASA Space Apps Challenge (20-21 October 2018).
+                It's a cross platform application developed using the Flutter Framework. What i did was
+                working on the initial idea, on the code and on the UI. Furthermore, i made the pitch video
+                and PowerPoint presentation.
               </p>
             </div>
-            <a href="https://play.google.com/store/apps/details?id=com.minar.birday" class="button small" target="_blank">Learn
-              More</a>
-          </div>
-        </div>
-
-        <div class="spotlight">
-          <div class="content">
-            <header class="major">
-              <h3><b>Folginar Development Project</b></h3>
-            </header>
-            <div>
-              <span class="image-small"><img src="images/folginar.png" alt="" /></span>
-              <p>
-                A project started with a friend of mine. It's a set of skins for PowerAmp (one of the most used music
-                players for Android) and they're currently the most famous skins for PowerAmp v3, with around 5k paid
-                downloads. Other skins are under development and the download count is going up!
-              </p>
-            </div>
-            <a href="https://play.google.com/store/apps/dev?id=7701026929786273235&hl=it" class="button small" target="_blank">Learn
-              More</a>
+            <a href="https://github.com/simonesestito/escape_earth" class="button small" target="_blank">Learn More</a>
           </div>
         </div>
 
