Skills and numbers updated

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
           <li>HTML/css</li>
           <li>SQL</li>
           <li>LUA</li>
+          <li>React</li>
+          <li>Gatsby</li>
+          <li>Liferay</li>
         </ul>
 
         <h2><i class="fas fa-laptop"></i><b>Softwares and platforms</b></h2>
@@ -97,6 +100,8 @@
           <li>Android Studio</li>
           <li>Visual Studio</li>
           <li>Eclipse</li>
+          <li>Postman</li>
+          <li>Git/Sourcetree</li>
           <li>Office suite</li>
           <li>Adobe Suite</li>
           <li>Inkscape</li>
@@ -269,19 +274,19 @@
         <ul class="statistics">
           <li class="style1">
             <span class="icon fas fa-download"></span>
-            <strong>+100.000</strong> Play Store downloads
+            <strong>+150.000</strong> Play Store downloads
           </li>
           <li class="style2">
             <span class="icon fas fa-money-bill"></span>
-            <strong>30.000</strong> Play Store paid downloads
+            <strong>40.000</strong> Play Store paid downloads
           </li>
           <li class="style1">
             <span class="icon fas fa-calendar-check"></span>
             <strong id="experience"></strong> Years of experience
           </li>
           <li class="style2">
-            <span class="icon fas fa-list-alt"></span>
-            <strong>30</strong> Github repositories
+            <span class="icon fas fa-star"></span>
+            <strong>~300</strong> Github<br>stars
           </li>
           <li class="style1">
             <span class="icon fas fa-gem"></span>
